--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.15)
-project(flutter_first_app LANGUAGES CXX)
+project(flutter_1st_app LANGUAGES CXX)
 
-set(BINARY_NAME "flutter_first_app")
+set(BINARY_NAME "flutter_1st_app")
 
 cmake_policy(SET CMP0063 NEW)
 
