--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.flutter_first_app">
+    package="com.example.flutter_1st_app">
    <application
-        android:label="flutter_first_app"
+        android:label="flutter_1st_app"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
