--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -92,10 +92,10 @@ BEGIN
             VALUE "CompanyName", "com.example" "\0"
             VALUE "FileDescription", "A new Flutter project." "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "flutter_first_app" "\0"
+            VALUE "InternalName", "flutter_1st_app" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2021 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "flutter_first_app.exe" "\0"
-            VALUE "ProductName", "flutter_first_app" "\0"
+            VALUE "OriginalFilename", "flutter_1st_app.exe" "\0"
+            VALUE "ProductName", "flutter_1st_app" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
